--- a/cartoon/css/components/_sun.scss
+++ b/cartoon/css/components/_sun.scss
@@ -7,6 +7,7 @@
 	background-color: yellow;
 	border-radius: 50%;
 	cursor: pointer;
+	z-index: 2;
 	transition: 0.3s;
 	animation: move 25s linear infinite;
 	img {
@@ -63,11 +64,9 @@
 	}
 	20% {
 		top: 50px;
-		z-index: 2;
 	}
 	80% {
 		top: 50px;
-		z-index: 2;
 	}
 	to {
 		top: 300px;
